@@ -1,4 +1,5 @@
 0.07
+ - Update Module::Install to 1.21 version.
  - Update copyright years.
 
 0.06 2022-11-05T16:16:34+01:00
